# mlflow-tutorial

./: pyproject.toml
mlflow_tutorial/Creating_Experiment/: 01.create_experiment.py  02.retrieve_experimnets.py  03.delete_experiments.py  04.mlflow_runs.py  05.mlflow_runs2.py  06.logging_parameters.py  07.logging_metrics.py  08.logging_artifacts.py  09.logging_artifacts2.py  10.logging_images.py  11.logging_models.py  12.logging_models.py  mlflow_utils.py
mlflow_tutorial/Creating_Experiment/mlruns/.trash/204466267651138593/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/.trash/459302497676508601/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/.trash/603258405660321800/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/0/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/0/22efd130aca94f02ba753aee22d1fdb9/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/0/7a9eaea008b4449aa2303f3755a13f5f/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/0/94dc4bff4cc64c86a8ee273967994210/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/436412175338922685/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/436412175338922685/07c0157c2c9340cd89f9bd52b1db8bb1/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/436412175338922685/3cef3c2700b54363ac3ceb4d442fa544/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/436412175338922685/5350c1eb7782439488ca7679fefe2020/: meta.yaml
mlflow_tutorial/Creating_Experiment/mlruns/436412175338922685/55f8fb65ee54498aa1e6a0f085de706a/: meta.yaml
(+40 files in other folders)
