[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = ""
authors = ["Gihyuk Kwon <imrlgur81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.14.2"
scikit-learn = "1.4.2"
matplotlib = "^3.9.1"
xgboost = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
